# ndmanager

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  ndchainer.rst  ndfetcher.rst  ndomcer.rst
docs/source/CLI/: index.rst  ndchainer.rst  ndomcer.rst
docs/source/overview/: index.rst  ndchainer.rst  ndfetcher.rst  ndomcer.rst
examples/: cendl31.yml  endfb71.yml  endfb8.yml  jeff33.yml
examples/chain/: jeff33-fast.yml  jeff33-short.yml  jeff33.yml
examples/xs/: cendl31.yml  cendl32.yml  endfb71.yml  endfb8.yml  endfb81.yml  foo.yml  jeff33.yml  jeff4t3.yml  test.yml
ndfetcher/: __init__.py  chain.py  commands.py  data.py  download.py  find.py  generate.py  main.py  ndb_commands.py  ndf_commands.py  nuclide.py  substitute.py  utils.py
ndmanager/: __init__.py  data.py  env.py  format.py  main.py  nuclide.py  utils.py
ndmanager/API/: base_library.py  data.py  data_library.py  data_sublibrary.py  endf6.py  iaea.py  ndm_library.py  neutron_library.py  nuclide.py  omc.py  openmc.py  photon_library.py  sha1.py  tsl_library.py  utils.py
ndmanager/API/iaea/: __init__.py  iaea.py  library.py  sublibrary.py
ndmanager/API/process/: __init__.py  base_manager.py  hdf5_neutron.py  hdf5_photon.py  hdf5_sublibrary.py  hdf5_tsl.py  input_parser.py  ndm_library.py  neutron_manager.py  photon_manager.py  tsl_manager.py
ndmanager/CLI/chainer/: branching_ratios.py  build.py  install.py  listchains.py  main.py  module.py  remove.py
ndmanager/CLI/fetcher/: __init__.py  commands.py  download.py  info.py  install.py  listlibs.py  main.py  remove.py
ndmanager/CLI/manager/: commands.py  init.py  main.py
ndmanager/CLI/omcer/: __init__.py  build.py  clone.py  commands.py  download.py  edit.py  generate.py  install.py  listlibs.py  main.py  module.py  neutron.py  photon.py  remove.py  substitute.py  tsl.py  utils.py
ndmanager/SHA1/: cendl31.py  cendl32.py  endfb71.py  endfb8.py  jeff311.py  jeff33.py  jendl5.py  tendl19.py  tendl23.py  test.py
ndmanager/fetcher/: __init__.py  commands.py  download.py  main.py
ndmanager/manager/: commands.py  main.py
ndmanager/omcer/: __init__.py  commands.py  download.py  edit.py  generate.py  main.py  substitute.py
tests/: conftest.py  data.py  test_format.py
tests/API/: test_endf6.py  test_iaea.py  test_nuclide.py  test_openmc.py  test_sha1.py  test_utils.py
tests/API/iaea/: test_iaea.py  test_library.py  test_sublibrary.py
tests/API/process/: test_base_manager.py  test_hdf5_neutron.py  test_hdf5_photon.py  test_hdf5_tsl.py  test_neutron_manager.py  test_photon_manager.py
tests/CLI/fetcher/: test_install.py
tests/CLI/omcer/: test_build.py
tools/ci/: install_njoy.sh
